--- a/cf_ratings/templates/add_problem.html
+++ b/cf_ratings/templates/add_problem.html
@@ -1,8 +1,81 @@
 {% extends 'base.html' %}
+
 {% block content %}
-<h1 class="title">Add Problem</h1>
-<form method="post">{% csrf_token %}
-  {{ form.as_p }}
-  <button class="button is-primary">Add</button>
-</form>
+<div class="columns is-centered">
+  <div class="column is-6-tablet is-5-desktop">
+    
+    <div class="has-text-centered mb-5">
+        <span class="icon is-large has-text-primary mb-2">
+            <i class="fas fa-cloud-download-alt fa-3x"></i>
+        </span>
+        <h1 class="title is-3 mt-2">Add New Problem</h1>
+        <p class="subtitle is-6 has-text-grey">
+            Enter the Codeforces Problem ID (e.g., <b>1850A</b> or <b>4A</b>). 
+            <br>We will automatically fetch the title and tags for you.
+        </p>
+    </div>
+
+    <div class="box" style="border: 1px solid #e2e8f0; border-radius: 16px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.05);">
+        
+        <form method="post" action=".">
+            {% csrf_token %}
+
+            {% if form.non_field_errors %}
+                <div class="notification is-danger is-light mb-4">
+                    <button type="button" class="delete" onclick="this.parentElement.remove()"></button>
+                    {% for error in form.non_field_errors %}
+                        {{ error }}
+                    {% endfor %}
+                </div>
+            {% endif %}
+
+            {% for field in form %}
+                <div class="field mb-5">
+                    <label class="label has-text-grey-dark">{{ field.label }}</label>
+                    <div class="control has-icons-left">
+                        <input 
+                            class="input is-medium is-rounded {% if field.errors %}is-danger{% endif %}" 
+                            type="text" 
+                            name="{{ field.name }}" 
+                            id="{{ field.id_for_label }}"
+                            placeholder="e.g. 2184G" 
+                            value="{{ field.value|default_if_none:'' }}"
+                            autofocus
+                        >
+                        <span class="icon is-left">
+                            <i class="fas fa-hashtag"></i>
+                        </span>
+                    </div>
+                    {% if field.help_text %}
+                        <p class="help has-text-grey">{{ field.help_text }}</p>
+                    {% endif %}
+                    {% for error in field.errors %}
+                        <p class="help is-danger">
+                            <i class="fas fa-exclamation-circle mr-1"></i> {{ error }}
+                        </p>
+                    {% endfor %}
+                </div>
+            {% endfor %}
+
+            <div class="field mt-5">
+                <div class="control">
+                    <button class="button is-primary is-fullwidth is-medium is-rounded">
+                        <span class="icon"><i class="fas fa-plus-circle"></i></span>
+                        <span>Fetch & Add Problem</span>
+                    </button>
+                </div>
+            </div>
+
+        </form>
+    </div>
+
+    <div class="has-text-centered mt-4">
+        <a href="{% url 'home' %}" class="button is-ghost has-text-grey">
+            <span class="icon"><i class="fas fa-arrow-left"></i></span>
+            <span>Back to List</span>
+        </a>
+    </div>
+
+  </div>
+</div>
 {% endblock %}
