enhance UI in login page

--- a/cf_ratings/templates/login.html
+++ b/cf_ratings/templates/login.html
@@ -1,8 +1,67 @@
 {% extends 'base.html' %}
+
 {% block content %}
-<h1 class="title">Login</h1>
-<form method="post">{% csrf_token %}
-  {{ form.as_p }}
-  <button class="button is-primary">Login</button>
-</form>
+<div class="columns is-centered is-vcentered" style="min-height: 60vh;">
+  <div class="column is-4-desktop is-6-tablet">
+    
+    <div class="has-text-centered mb-5">
+        <span class="icon is-large has-text-primary mb-2">
+            <i class="fas fa-user-circle fa-3x"></i>
+        </span>
+        <h1 class="title is-3">Welcome Back</h1>
+        <p class="subtitle is-6 has-text-grey">Please login to continue</p>
+    </div>
+
+    <div class="box" style="border: 1px solid #e2e8f0; border-radius: 12px; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);">
+      
+      <form method="post">
+        {% csrf_token %}
+
+        {% if form.non_field_errors %}
+          <div class="notification is-danger is-light is-small">
+            <button type="button" class="delete" onclick="this.parentElement.remove()"></button>
+            <i class="fas fa-exclamation-triangle mr-1"></i> 
+            {{ form.non_field_errors.0 }}
+          </div>
+        {% endif %}
+
+        <div class="field">
+            <label class="label has-text-grey-dark">Username</label>
+            <div class="control has-icons-left">
+                <input class="input is-rounded is-medium" type="text" name="username" placeholder="e.g. piyashbasak" autofocus required>
+                <span class="icon is-small is-left">
+                    <i class="fas fa-user"></i>
+                </span>
+            </div>
+        </div>
+
+        <div class="field">
+            <label class="label has-text-grey-dark">Password</label>
+            <div class="control has-icons-left">
+                <input class="input is-rounded is-medium" type="password" name="password" placeholder="********" required>
+                <span class="icon is-small is-left">
+                    <i class="fas fa-lock"></i>
+                </span>
+            </div>
+        </div>
+
+        <div class="field mt-5">
+            <button class="button is-primary is-fullwidth is-rounded is-medium shadow-button">
+                <strong>Login</strong>
+            </button>
+        </div>
+        
+        <input type="hidden" name="next" value="{{ next }}">
+      </form>
+    </div>
+
+    <div class="has-text-centered mt-4">
+        <p class="is-size-7 has-text-grey">
+            Don't have an account? 
+            <a href="{% url 'register' %}" class="has-text-primary has-text-weight-bold">Sign up here</a>
+        </p>
+    </div>
+
+  </div>
+</div>
 {% endblock %}
